# gskey

./: AUTHORS  CREDITS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.in  gskey.c  gskey.h  libtool  main.c
libmd/: Makefile
libskey/: Makefile  mdx.h
