dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(2, 0)

AM_PATH_GTK_2_0(2.0.0, :,
  AC_MSG_ERROR([
*** GTK 2.0.0 lub wy¿sza wymagana do kompilacji]),)

gtk_cflags=`pkg-config --cflags gtk+-2.0`
gtk_libs=`pkg-config --libs gtk+-2.0`

AC_PROG_LIBTOOL
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_MAKE_SET

AC_SUBST(gtk_cflags)
AC_SUBST(gtk_libs)

AC_OUTPUT([Makefile])
